# dev-templates

./: README.md
fluent-bit_template/: README.md  docker-compose.yml  fluent-bit.conf
rust_dev_template/dev/: .env.example  .gitignore  Cargo.toml
rust_dev_template/dev/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
rust_dev_template/dev/crates/app/: Cargo.toml
rust_dev_template/dev/crates/lib1/: Cargo.toml
rust_dev_template/dev/crates/myapp_app/: Cargo.toml
rust_dev_template/dev/crates/myapp_app/migrations/: 20260101000000_create_users.sql  20260101000001_insert_users.sql
rust_dev_template/dev/crates/myapp_app/src/: cmd.rs  config.rs  logging.rs  main.rs  run.rs
rust_dev_template/dev/crates/myapp_app/src/config/: convert.rs  secret.rs
rust_dev_template/dev/crates/myapp_db/: Cargo.toml
rust_dev_template/dev/crates/myapp_db/src/: db.rs
rust_dev_template/dev/crates/myapp_db/src/query/: users.rs
rust_dev_template/dev/crates/myapp_web/: Cargo.toml
rust_dev_template/dev/crates/myapp_web/src/: api.rs  lib.rs  route.rs  server.rs  state.rs
rust_dev_template/dev/crates/myapp_web/src/route/: example.rs  health.rs  ready.rs
rust_dev_template/dev/deploy/db/init/: 001_schema.sql
rust_dev_template/dev/deploy/releases/: docker-compose.yml
rust_dev_template/dev/deploy/releases/docker/app/: Dockerfile
rust_dev_template/dev/deploy/scripts/: db-backup.sh  db-restore.sh  migrate.sh  release-switch.sh  release-unpack.sh  release.sh  run.sh.example
rust_dev_template/dev/scripts/: bootstrap-pack.sh  bootstrap-unpack.sh  bootstrap-unpack.sh.example  check.sh  fix-permissions.sh  release-pack.sh
(+6 files in other folders)
