[workspace]
members = [ "crates/*" ]
resolver = "2"

[workspace.dependencies]
chrono = { version = "0.4", features = [ "serde" ] }
serde = { version = "1", features = [ "derive" ] }
sqlx = { version = "0.8", features = [ "macros", "runtime-tokio", "tls-rustls", "postgres", "chrono" ] }
thiserror = "2.0"
tokio = { version = "1", features = [ "full" ] }
tracing = "0.1"
