[package]
name = "myapp_web"
version = "0.1.0"
edition = "2021"

[dependencies]
myapp_db = { path = "../myapp_db" }

chrono.workspace = true
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

axum = "0.8"
axum-governor = "2"
serde_json = "1"
tower = { version = "0.5", features = [ "full" ] }
tower-http = { version = "0.6", features = [ "trace", "timeout", "request-id", "util" ] }
